<resources>
    <string name="app_name">Kappitan Cook</string>
    <string name="panel_name">Kappitan Cook</string>
    <string name="app_logo">Logo aplikacji</string>
    <string name="email_address">Adres e-mail</string>
    <string name="password">Hasło</string>
    <string name="login">Zaloguj się</string>
    <string name="logout">Wyloguj się</string>
    <string name="forgot_passowrd">Przypomnij hasło</string>
    <string name="your_nickname">Nazwa użytkownika</string>
    <string name="no_account">Nie masz konta? Zarejestruj się</string>
    <string name="repeat_password">Powtórz hasło</string>
    <string name="sign_up">Zarejestruj się</string>
    <string name="already_member">Masz konto? Zaloguj się</string>
    <string name="my_recipes">Moje przepisy</string>
    <string name="shopping_list">Lista zakupów</string>
    <string name="random_recipe">Losuj przepis</string>
    <string name="filter_recipes">Filtruj przepisy</string>
    <string name="find_recipe">Znajdź przepis</string>
    <string name="add_recipe">Dodaj nowy przepis</string>
    <string name="dish_name">Nazwa dania</string>
    <string name="ingredients">Składniki</string>
    <string name="ingredient">Nazwa składnika</string>
    <string name="meal_type_text">Typ posiłku</string>
    <string name="dish_type_text">Typ dania</string>
    <string name="time_to_prepare">Czas przygotowania</string>
    <string name="description">Opis przygotowania</string>
    <string name="add_photo">Dodaj zdjęcie</string>
    <string name="add_ingredient">Dodaj składnik</string>
    <string name="add">Dodaj</string>
    <string name="quantity">Ilość</string>
    <string name="favorite">Ulubione</string>
    <string name="not_favorite">Nieulubione</string>
    <string name="chosen">Wybrane</string>
    <string name="unchosen">Niewybrany</string>
    <string name="username">Nazwa użytkownika</string>
    <string name="dish_image">Zdjęcie dania</string>
    <string name="dish_type_ic">Ikona typu dania</string>
    <string name="meal_type_ic">Ikona typu posiłku</string>
    <string name="time_to_prepare_ic">Ikona czasu przygotowania</string>
    <string name="send_a_recipe">Wyślij przepis</string>
    <string name="enter_email">Wpisz adres e-mail</string>
    <string name="options">Opcje</string>
    <string name="add_to_shopping_list">Dodaj do listy zakupów</string>
    <string name="search">Szukaj</string>
    <string name="main">Ekran główny</string>
    <string name="shopping_list_msg">Twoja lista zakupów jest pusta</string>
    <string name="shopping_list_name">Nazwa</string>
    <string name="create_shopping_list">Utwórz listę zakupów</string>
    <string name="remove_items_from_list">Wyczyść listę zakupów</string>
    <string name="send_shopping_list">Wyślij listę zakupów</string>
    <string name="no_idea_with_recipe">Brak pomysłu na przepis?</string>
    <string name="draw">Losuj</string>
    <string name="maybe_that">A może…</string>
    <string name="only_favorite">Tylko ulubione</string>
    <string name="start_filtering">Filtruj</string>
    <string name="delete_recipe">Usuń przepis</string>
    <string name="delete_recipe_question">Na pewno chcesz usunąć przepis?</string>

    <string-array name="dish_types">
        <item>Śniadanie</item>
        <item>Obiad</item>
        <item>Kolacja</item>
        <item>Deser</item>
        <item>Przystawka</item>
        <item>Napój</item>
    </string-array>

    <string-array name="meal_types">
        <item>Mięsne</item>
        <item>Wegetariańskie</item>
        <item>Wegańskie</item>
        <item>Fit</item>
        <item>Dla dzieci</item>
    </string-array>

    <string-array name="time_to_prepare">
        <item>Do 15 min</item>
        <item>15–30 min</item>
        <item>30–60 min</item>
        <item>Ponad 60 min</item>
    </string-array>

    <string-array name="dish_types_filtering">
        <item>Bez znaczenia</item>
        <item>Śniadanie</item>
        <item>Obiad</item>
        <item>Kolacja</item>
        <item>Deser</item>
        <item>Przystawka</item>
        <item>Napój</item>
    </string-array>

    <string-array name="meal_types_filtering">
        <item>Bez znaczenia</item>
        <item>Mięsne</item>
        <item>Wegetariańskie</item>
        <item>Wegańskie</item>
        <item>Fit</item>
        <item>Dla dzieci</item>
    </string-array>

    <string-array name="time_to_prepare_filtering">
        <item>Bez znaczenia</item>
        <item>Do 15 min</item>
        <item>15–30 min</item>
        <item>30–60 min</item>
        <item>Ponad 60 min</item>
    </string-array>

    <string-array name="only_favorite">
        <item>Nie</item>
        <item>Tak</item>
    </string-array>

    <string-array name="units">
        <item>g</item>
        <item>dag</item>
        <item>kg</item>
        <item>ml</item>
        <item>szt.</item>
        <item>szkl.</item>
        <item>opak.</item>
        <item>łyż.</item>
        <item>łyżecz.</item>
        <item>szczypta</item>
    </string-array>

</resources>
