<?xml version="1.0" encoding="utf-8"?>


<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/recipe_card"
    android:layout_width="match_parent"
    android:layout_height="280dp"
    android:layout_marginLeft="24dp"
    android:layout_marginRight="24dp"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp"
    tools:srcCompat="@android:color/holo_orange_light"
    card_view:cardElevation="3dp" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/recipe_list_item_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?android:attr/selectableItemBackground">

        <ImageView
            android:id="@+id/dish_image"
            android:layout_width="0dp"
            android:layout_height="160dp"
            android:contentDescription="@string/dish_image"
            android:scaleType="centerCrop"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintHorizontal_bias="0.0"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@drawable/dish_example" />

        <ImageView
            android:id="@+id/favorite_ic"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/chosen"
            card_view:layout_constraintEnd_toStartOf="@+id/chosen_ic"
            card_view:layout_constraintTop_toBottomOf="@+id/meal_type_text"
            tools:srcCompat="@drawable/ic_favorite_border_black_24dp" />

        <ImageView
            android:id="@+id/chosen_ic"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/favorite"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/meal_type_text"
            tools:srcCompat="@drawable/ic_bookmark_border_black_24dp" />

        <TextView
            android:id="@+id/dish_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingBottom="4dp"
            android:textSize="20sp"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintHorizontal_bias="0.055"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/dish_image"
            tools:text="Nazwa posiłku" />

        <ImageView
            android:id="@+id/time_ic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/time_to_prepare_ic"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/dish_type_text"
            tools:srcCompat="@drawable/ic_time_24dp" />

        <TextView
            android:id="@+id/time_to_prepare"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingBottom="4dp"
            android:textSize="16sp"
            card_view:layout_constraintStart_toEndOf="@+id/time_ic"
            card_view:layout_constraintTop_toBottomOf="@+id/dish_type_text"
            tools:text="45 min" />

        <ImageView
            android:id="@+id/dish_type_ic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/dish_type_ic"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/dish_name"
            tools:srcCompat="@drawable/ic_dish_24dp" />

        <TextView
            android:id="@+id/dish_type_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingBottom="4dp"
            android:textSize="16sp"
            card_view:layout_constraintStart_toEndOf="@+id/dish_type_ic"
            card_view:layout_constraintTop_toBottomOf="@+id/dish_name"
            tools:text="Obiad" />

        <ImageView
            android:id="@+id/meal_type_ic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/meal_type_ic"
            card_view:layout_constraintStart_toEndOf="@+id/dish_type_text"
            card_view:layout_constraintTop_toBottomOf="@+id/dish_name"
            tools:srcCompat="@drawable/ic_meal_type_24dp" />

        <TextView
            android:id="@+id/meal_type_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingBottom="4dp"
            android:textSize="16sp"
            card_view:layout_constraintStart_toEndOf="@+id/meal_type_ic"
            card_view:layout_constraintTop_toBottomOf="@+id/dish_name"
            tools:text="Mięsne" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
